# async-tgbot-cpp

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  conanfile.txt
.github/workflows/: build-and-test.yml  cmake-multi-platform.yml
include/atgbot/: async_bot.hpp  atgbot.hpp  coroutine.hpp
include/atgbot/awaitables/: callbackquery.hpp  create.hpp  makeasync.hpp  message.hpp  timer.hpp
include/atgbot/tools/: eventfilter.hpp  eventqueue.hpp  eventrouter.hpp  scheduler.hpp  session.hpp  timerevent.hpp
src/awaitables/: callbackquery.cpp  message.cpp
src/tools/: session.cpp  sheduler.cpp
test/: CMakeLists.txt  main.cpp
test/atgbot/awaitables/: callbackquery.cpp  create.cpp  makeasync.cpp  message.cpp
test/atgbot/tools/: eventfilter.cpp  eventqueue.cpp
